# parsuna

./: .gitignore  Cargo.toml
.github/workflows/: docs.yml
docs/: .gitignore  Makefile  conf.py  event_model.rst  grammar_language.rst  index.rst  introduction.rst  make.bat  pyproject.toml  usage.rst
docs/pipeline/: analyze.rst  codegen.rst  index.rst  lower.rst  parse.rst
runtimes/c/: .gitignore  parsuna_rt.h
runtimes/csharp/: .gitignore  Parsuna.Runtime.csproj  Runtime.cs
runtimes/go/: .gitignore  go.mod  runtime.go
runtimes/java/: .gitignore  pom.xml
runtimes/java/src/main/java/dev/parsuna/runtime/: ApplyActions.java  Cursor.java  DfaConfig.java  DfaMatcher.java  DriveStep.java  Event.java  Lexer.java  ParseError.java  Parser.java  ParserConfig.java  ParserOptions.java  Pos.java  Span.java  Token.java
runtimes/rust/: .gitignore  Cargo.toml
runtimes/rust/src/: events.rs  lexer.rs  lib.rs  parser.rs  span.rs
runtimes/typescript/: .gitignore  package.json  tsconfig.json
runtimes/typescript/src/: index.ts
src/: diagnostic.rs  error.rs  lib.rs  main.rs  span.rs  tree_sitter.rs
src/analysis/: first_follow.rs  lints.rs  mod.rs  mode_check.rs  shadow.rs  validate.rs
src/codegen/: c.rs  common.rs  csharp.rs  go.rs  java.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/grammar/: generated.rs  ir.rs  mod.rs  parser.rs  parsuna.parsuna
src/lowering/: build.rs  dump.rs  fuse.rs  layout.rs  lexer_dfa.rs  mod.rs  optimize.rs  recovery.rs  state_first.rs  validate.rs
