[package]
name = "parsuna"
version = "0.1.0"
edition = "2021"
description = "Parsuna: recoverable, pull-based parsers with precise errors"
license = "LGPL-3.0-or-later"

[dependencies]
parsuna-rt = { path = "runtimes/rust" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]

[workspace]
members = ["runtimes/rust"]
