[project]
name = "parsuna-docs"
version = "0.0.0"
description = "Build dependencies for the parsuna Sphinx documentation."
requires-python = ">=3.9"
dependencies = [
    "sphinx>=7,<9",
    "furo>=2024.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
